# 2d-game

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  run.sh
src/: Configuration.hpp  Enemy.cpp  Enemy.hpp  Events.cpp  Events.hpp  Game.cpp  Game.hpp  Logger.hpp  Main.cpp  Particle.hpp  Player.cpp  Player.hpp  configuration.hpp  events.cpp  events.hpp  game.cpp  game.hpp  input_system.cpp  input_system.hpp  main.cpp  particles.cpp  player.cpp  player.hpp  tileMap.cpp
